[gd_scene load_steps=3 format=3 uid="uid://rpef728qpqsc"]

[ext_resource type="Script" uid="uid://18duye12uhrp" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="FontFile" uid="uid://bl1sweq6bsv1t" path="res://assets/IntelOneMono/IntoneMonoNerdFont-Bold.ttf" id="2_ekxnf"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BG" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -143.5
offset_right = 143.5
offset_bottom = 55.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 40
text = "Typing Trouble"

[node name="Label2" type="Label" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -304.0
offset_top = -42.0
offset_right = 304.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 30
text = "- A game by Hashir and Synchro. -"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(160, 40)
layout_mode = 2
text = "Play Game"

[node name="QuitButton" type="Button" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(160, 40)
layout_mode = 2
text = "Quit Game
"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
